--- a/aula08/index.html
+++ b/aula08/index.html
@@ -5,31 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/header.css">
+    
     <title>Api Vagalume</title>
 </head>
 <body>
 
     <!-- Seção de busca -->
-    <section id="cabecalho">
-        <div class="conteudo center">
-            <div id="logo">
-                <figure>
-                    <img class="bkg-img" src="./img/vagalume.png" width="100%" height="100"/>
-                </figure>
+    <header id="cabecalho">
+            <div>
+                <img class="bkg-img" src="./img/vagalume.png"/>
             </div>
-            <div id="container_busca" class="center">
-                <h2>
+            <div id="container_busca">
+                <p class="searchCantor">
                     Coloque o nome de um cantor
-                </h2>
-                <label>
+                </p>
+                <div class="search">
                     <input type="text" id="artista"/>
-                </label>
-                <label>
                     <input type="button" value="BUSCAR" id="btn_buscar"/>
-                </label>
             </div>
         </div>
-    </section>
+    </header>
+    <main>
+        <div class="conteudo center"></div>
+    </main>
     <div id="dados_artista">
         <div class="opacity">
             <div class="conteudo center">
